fixed iphone y overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,8 @@ body {
 }
 .wrapper {
  overflow-x: hidden;
+ overflow-y: hidden;
+
 }
 
 .form-control::-webkit-input-placeholder {
